Tue Dec  7 22:37:15 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* io.c (io_read): duplicate string if shared. [ruby-dev:42719]

Tue Dec  7 21:59:37 2010  Kouhei Sutou  <kou@cozmixng.org>

	* lib/rexml/light/node.rb: remove circular require.

Tue Dec  7 18:56:52 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/nkf/lib/kconv.rb (String#kconv): fix typo and update rdoc.
	  patched by Kouhei Yanagita [ruby-dev:42696]

Tue Dec  7 00:27:14 2010  Masaya Tarui  <tarui@ruby-lnag.org>

	* win32/win32.c (rb_w32_read): fixed more for readline,
	  and so on. [ruby-core:33511]

Mon Dec  6 18:56:42 2010  Kazuhiro NISHIYAMA  <zn@mbf.nifty.com>

	* test/ruby/test_string.rb (TestString#test_scan): add a test for
	  [ruby-core:33338] #4087.

Thu Dec 23 19:17:14 2010  Yuki Sonoda (Yugui)  <yugui@yugui.jp>

	* test/net/imap/cacert.pem: updated because it has been expired.

	* test/net/imap/server.crt: signed again because CA cert was expired.

Sun Dec  5 17:56:36 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (make_metaclass): fix probable typo.  builtin type flag
	  cannot be used with FL_TEST.

Sun Dec  5 12:09:27 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/irb/init.rb (IRB.parse_opts): fix typo. [ruby-core:33574]

Sun Dec  5 11:27:08 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (load_file_internal): decrement for ungotten line.
	  [ruby-dev:42680]

Fri Dec  3 07:08:42 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/stringio/stringio.c (strio_getline): round upto next char
	  boundary.  [ruby-dev:42674]

Thu Dec  2 15:31:14 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): more fix. [ruby-core:33513]

Thu Dec  2 13:41:43 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): workaround for console reading troubles.
	  fixed [ruby-core:33511]

Tue Nov 30 12:23:52 2010  NAKAMURA Usaku  <usa@ruby-lang.org>

	* win32/win32.c (rb_w32_read): read only 1 byte at once on console.