@@ -40,64 +40,6 @@ end
 
 
 ################################################
-# use pseudo-toplevel feature of MultiTkIp ?
-if (!defined?(Use_PseudoToplevel_Feature_of_MultiTkIp) ||
-      Use_PseudoToplevel_Feature_of_MultiTkIp)
-  module MultiTkIp_PseudoToplevel_Evaluable
-    #def pseudo_toplevel_eval(body = Proc.new)
-    #  Thread.current[:TOPLEVEL] = self
-    #  begin
-    #    body.call
-    #  ensure
-    #    Thread.current[:TOPLEVEL] = nil
-    #  end
-    #end
-
-    def pseudo_toplevel_evaluable?
-      @pseudo_toplevel_evaluable
-    end
-
-    def pseudo_toplevel_evaluable=(mode)
-      @pseudo_toplevel_evaluable = (mode)? true: false
-    end
-
-    def self.extended(mod)
-      mod.__send__(:extend_object, mod)
-      mod.instance_variable_set('@pseudo_toplevel_evaluable', true)
-    end
-  end
-
-  class Object
-    alias __method_missing_alias_for_MultiTkIp__ method_missing
-    private :__method_missing_alias_for_MultiTkIp__
-
-    def method_missing(id, *args)
-      begin
-        has_top = (top = MultiTkIp.__getip.__pseudo_toplevel) &&
-          top.respond_to?(:pseudo_toplevel_evaluable?) &&
-          top.pseudo_toplevel_evaluable? &&
-          top.respond_to?(id)
-      rescue Exception => e
-        has_top = false
-      end
-
-      if has_top
-        top.__send__(id, *args)
-      else
-        __method_missing_alias_for_MultiTkIp__(id, *args)
-      end
-    end
-  end
-else
-  # dummy
-  module MultiTkIp_PseudoToplevel_Evaluable
-    def pseudo_toplevel_evaluable?
-      false
-    end
-  end
-end
-
-################################################
 # exceptiopn to treat the return value from IP
 class MultiTkIp_OK < Exception
   def self.send(thread, ret=nil)
@@ -841,7 +783,18 @@ class MultiTkIp
         Thread.pass
       end
       # INTERP_THREAD.run
+      raise @interp_thread[:interp] if @interp_thread[:interp].kind_of? Exception
       @interp = @interp_thread[:interp]
+
+      # delete the interpreter and kill the eventloop thread at exit
+      interp = @interp
+      interp_thread = @interp_thread
+      END{
+        if interp_thread.alive?
+          interp.delete
+          interp_thread.kill
+        end
+      }
 
       def self.mainloop(check_root = true)
         begin
@@ -2086,6 +2039,67 @@ class MultiTkIp
   end
 end
 
+
+################################################
+# use pseudo-toplevel feature of MultiTkIp ?
+if (!defined?(Use_PseudoToplevel_Feature_of_MultiTkIp) ||
+      Use_PseudoToplevel_Feature_of_MultiTkIp)
+  module MultiTkIp_PseudoToplevel_Evaluable
+    #def pseudo_toplevel_eval(body = Proc.new)
+    #  Thread.current[:TOPLEVEL] = self
+    #  begin
+    #    body.call
+    #  ensure
+    #    Thread.current[:TOPLEVEL] = nil
+    #  end
+    #end
+
+    def pseudo_toplevel_evaluable?
+      @pseudo_toplevel_evaluable
+    end
+
+    def pseudo_toplevel_evaluable=(mode)
+      @pseudo_toplevel_evaluable = (mode)? true: false
+    end
+
+    def self.extended(mod)
+      mod.__send__(:extend_object, mod)
+      mod.instance_variable_set('@pseudo_toplevel_evaluable', true)
+    end
+  end
+
+  class Object
+    alias __method_missing_alias_for_MultiTkIp__ method_missing
+    private :__method_missing_alias_for_MultiTkIp__
+
+    def method_missing(id, *args)
+      begin
+        has_top = (top = MultiTkIp.__getip.__pseudo_toplevel) &&
+          top.respond_to?(:pseudo_toplevel_evaluable?) &&
+          top.pseudo_toplevel_evaluable? &&
+          top.respond_to?(id)
+      rescue Exception => e
+        has_top = false
+      end
+
+      if has_top
+        top.__send__(id, *args)
+      else
+        __method_missing_alias_for_MultiTkIp__(id, *args)
+      end
+    end
+  end
+else
+  # dummy
+  module MultiTkIp_PseudoToplevel_Evaluable
+    def pseudo_toplevel_evaluable?
+      false
+    end
+  end
+end
+
+
+################################################
 # evaluate a procedure on the proper interpreter
 class MultiTkIp
   # instance & class method
